--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/GameJam2022/Levels/LVL_Space.LVL_Space
-EditorStartupMap=/Game/GameJam2022/Levels/LVL_Space.LVL_Space
+GameDefaultMap=/Game/GameJam2022/Levels/LVL_MainMenu.LVL_MainMenu
+EditorStartupMap=/Game/GameJam2022/Levels/LVL_MainMenu.LVL_MainMenu
 GlobalDefaultGameMode="/Script/GameJam2022.GameJam2022GameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
